Made different files

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,19 +10,22 @@
   <header>
     <nav>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" onclick="showPage('home')">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="tic-tac-toe.html">Tic-Tac-Toe</a></li>
         <li><a href="rough-work.html">Rough Work</a></li>
       </ul>
     </nav>
   </header>
-
   <main>
-    <br><br>
-    <h1 class="heading" id="heading">Welcome to the Tic-Tac-Toe Website!</h1>
+    <br><br><br>
+    <div class="profile-card">
+        <img src="tictactoe.jfif" alt="Profile Photo" class="profile-img">
+        <h2>Tic Tac Toe</h2><br>
+        <p>Hi! I'm a fun 2-player party game. The goal is to get 3 X's or 3 O's in a row and block your opponent from doing the same thing. There's lots of strategies you can use to overcome your opponent!</p>
+      </div>
   </main>
-
   <script src="script.js"></script>
+
 </body>
 </html>
