--- a/rough-work.html
+++ b/rough-work.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tic-Tac-Toe</title>
+  <title>My Website</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -17,12 +17,5 @@
       </ul>
     </nav>
   </header>
-
-  <main>
-    <br><br>
-    <h1 class="heading" id="heading">Welcome to the Tic-Tac-Toe Website!</h1>
-  </main>
-
-  <script src="script.js"></script>
 </body>
 </html>
